--- a/jrrp/index.html
+++ b/jrrp/index.html
@@ -13,7 +13,7 @@
                <li><a><strong>iT Craft Studio互联工艺</strong></a></li>
                <li><a href="..">首页</a></li>
                <li><a href="../downloads">下载</a></li>
-               <li><a href="../community">论坛</a></li>
+               <li><a href="../community">返回主站</a></li>
                <li><a href="../blog">公告</a></li>
                <li style="float: right;"><a href="./about">关于我们</a></li>
                <li style="float: right;" class="search">
