--- a/start/index.html
+++ b/start/index.html
@@ -9,7 +9,7 @@
 <strong>
 	  <img src="https://www.dmoe.cc/random.php" class="bg2" id="bg"></img>
     <nav>
-      <a href="https://www.minerstudio.xyz">互联工艺·首页</a>
+      <a href="..">互联工艺·首页</a>
     </nav>
     <br /><br /><br />
     <h2 class="title">开始</h2>
